# shoe-store/api/swagger/swagger.yaml
@@ -20,15 +20,15 @@ produces:
   - application/json
   - application/octet-stream
 paths:
-  /shoe/{id}:
+  /brand/{idBrand}:
     x-swagger-router-controller: shoe
     get:
-      description: get a shoe
+      description: Get all shoes from a specific brand
       # define the type of response for Success "200" and Error
-      operationId: getAll
+      operationId: getByBrand
       parameters:
-        - name: id
-          type: string
+        - name: idBrand
+          type: integer
           in: path
           required: true
       responses:
@@ -79,37 +79,34 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/GeneralResponse"
         # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
-      description: Get a shoe
+      description: Update a shoe
       # used as the method name of the controller
       operationId: update
       parameters:
         - name: id
-          in: query
           description: The id of the shoe
+          in: query
           required: true
           type: integer
         - name: shoe
-          in: query
-          description: The model of the shoe to be updated
-          type: string
-        - name: size
-          in: query
-          description: The size of the shoe to be updated
+          description: Shoe properties
+          in: body
           required: true
-          type: integer
+          schema:
+           $ref: "#/definitions/Shoe"
       responses:
         "200":
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/GeneralResponse"
         # responses may fall through to errors
         default:
           description: Error
@@ -130,7 +127,7 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/GeneralResponse"
         # responses may fall through to errors
         default:
           description: Error
@@ -140,12 +137,6 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   ErrorResponse:
     required:
       - message
@@ -161,9 +152,13 @@ definitions:
       size:
         type: number
         description: task description
+      idBrand:
+        type: number
+        description: The brand id 
     required:
       - model
       - size
+      - idBrand
   GeneralResponse:
     type: object
     properties:
